--- a/tmux.conf
+++ b/tmux.conf
@@ -44,14 +44,6 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
-set -g @plugin 'catppuccin/tmux' # See https://github.com/catppuccin/tmux/tags for additional tags
-# ...alongside""
-set -g @catppuccin_window_status_style "rounded"
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-left "#{E:@catppuccin_status_application}"
-set -ag status-left "#{E:@catppuccin_status_session}"
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
@@ -60,6 +52,22 @@ set -g @vim_navigator_mapping_up "C-k"
 set -g @vim_navigator_mapping_down "C-j"
 set -g @vim_navigator_mapping_prev ""  # removes the C-\ binding
 set -g @vim_navigator_prefix_mapping_clear_screen ""
+
+
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+set -g @dracula-show-ssh-session-port true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-fixed-location "Berlin"
+set -g @dracula-show-location false
+
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-left "#{E:@catppuccin_status_application}"
+set -ag status-left "#{E:@catppuccin_status_session}"
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
